--- a/beautyChuSpring/src/main/webapp/view/admin/coupon.html
+++ b/beautyChuSpring/src/main/webapp/view/admin/coupon.html
@@ -267,9 +267,10 @@
       <section id="main-content">
           <section class="wrapper">
           	<h3><i class="fa fa-angle-right"></i> Coupon</h3>
-				<div class="row">
+          	
+ 				<div class="row">
 				
-	                  <div class="col-md-12">
+	                  <!-- <div class="col-md-12">
 	                  	  <div class="content-panel">
 	                  	  	  <h4><i class="fa fa-angle-right"></i> Basic Table</h4>
 	                  	  	  <hr>
@@ -303,13 +304,13 @@
 		                          </tr>
 		                          </tbody>
 		                      </table>
-	                  	  </div><! --/content-panel -->
-	                  </div><!-- /col-md-12 -->
-                  
+	                  	  </div>/content-panel 
+	                  </div>/col-md-12
+                   -->
 	                  <div class="col-md-12 mt">
 	                  	<div class="content-panel">
 	                          <table class="table table-hover">
-	                  	  	  <h4><i class="fa fa-angle-right"></i> Hover Table</h4>
+	                  	  	  <h4><i class="fa fa-angle-right"></i> Coupon Management </h4>
 	                  	  	  <hr>
 	                              <thead>
 	                              <tr>
@@ -340,9 +341,10 @@
 	                              </tr>
 	                              </tbody>
 	                          </table>
-	                  	  </div><!--/content-panel -->
+	                  	  </div><!-- /content-panel -->
 	                  </div><!-- /col-md-12 -->
-				</div><!-- row -->
+				</div> 
+				<!-- row -->
 
               <div class="row mt">
                   <div class="col-md-12">
