--- a/beautyChuSpring/src/main/webapp/view/admin/coupon.html
+++ b/beautyChuSpring/src/main/webapp/view/admin/coupon.html
@@ -314,30 +314,43 @@
 	                  	  	  <hr>
 	                              <thead>
 	                              <tr>
-	                                  <th>#</th>
-	                                  <th>First Name</th>
-	                                  <th>Last Name</th>
-	                                  <th>Username</th>
+	                                  <th>쿠폰 소지자</th>
+	                                  <th>쿠폰 코드</th>
+	                                  <th>발급일</th>
+	                                  <th>상태</th>
+	                                  <th>확인</th>
 	                              </tr>
 	                              </thead>
 	                              <tbody>
 	                              <tr>
-	                                  <td>1</td>
-	                                  <td>Mark</td>
-	                                  <td>Otto</td>
-	                                  <td>@mdo</td>
+	                                  <td>구현체윤</td>
+	                                  <td>2015A-0101A-yunys</td>
+	                                  <td>2015-01-01 10:10:20</td>
+	                                  <td><span class="label label-success label-mini">사용완료</span></td>
+	                                  <td>
+	                                  <button class="btn btn-success btn-xs"><i class="fa fa-check"></i></button>
+	                                  <button class="btn btn-danger btn-xs"><i class="fa fa-trash-o "></i></button>
+	                                  </td>
 	                              </tr>
 	                              <tr>
-	                                  <td>2</td>
-	                                  <td>Jacob</td>
-	                                  <td>Thornton</td>
-	                                  <td>@fat</td>
+	                                  <td>디자이너강</td>
+	                                  <td>2015A-0101A-yunys</td>
+	                                  <td>2015-01-03 10:30:20</td>
+	                                  <td><span class="label label-warning label-mini">미사용</span></td>
+	                                  <td>
+	                                  <button class="btn btn-success btn-xs"><i class="fa fa-check"></i></button>
+	                                  <button class="btn btn-danger btn-xs"><i class="fa fa-trash-o "></i></button>
+	                                  </td>
 	                              </tr>
 	                              <tr>
-	                                  <td>3</td>
-	                                  <td>Simon</td>
-	                                  <td>Mosa</td>
-	                                  <td>@twitter</td>
+	                                  <td>김기흥</td>
+	                                  <td>2015A-0101A-yunys</td>
+	                                  <td>2015-01-04 20:20:30</td>
+	                                  <td><span class="label label-success label-mini">사용완료</span></td>
+	                                  <td>
+	                                  <button class="btn btn-success btn-xs"><i class="fa fa-check"></i></button>
+	                                  <button class="btn btn-danger btn-xs"><i class="fa fa-trash-o "></i></button>
+	                                  </td>
 	                              </tr>
 	                              </tbody>
 	                          </table>
