--- a/beautyChuSpring/src/main/webapp/view/common/footer.html
+++ b/beautyChuSpring/src/main/webapp/view/common/footer.html
@@ -1,1 +1,6 @@
-<!-- 공통 footer -->
+ <!-- 공통 footer --> <!-- style="width: 1200px; height:100px; position: absolute; bottom: 0px; text-align: center;" -->
+<div style="width: 100%; text-align: center;"  >
+<a href="#">Management</a>, <a href="jy_qna.html">문의하기</a>.<br> 
+Yoon Yong Sik, Kang Da Hyun, Kim Ki Hyun, Kim Ji Yeong <br>
+			copyright @ 2015 by AppChu    <img class="kh-logo" style="width: 40px; height: 20px;" src="../images/icon/logo.jpg"/>
+			</div>  
