--- a/beautyChuSpring/src/main/webapp/view/kh-celebritylist.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-celebritylist.html
@@ -19,70 +19,50 @@
 <link rel="stylesheet" type="text/css" href="../css/common.css">
 
 
-<!-- 슬라이드 이미지 -->
-<link rel="apple-touch-icon"
-	href="http://cdn.ink.sapo.pt/3.1.1/img/touch-icon-iphone.png">
-<link rel="apple-touch-icon" sizes="76x76"
-	href="http://cdn.ink.sapo.pt/3.1.1/img/touch-icon-ipad.png">
-<link rel="apple-touch-icon" sizes="120x120"
-	href="http://cdn.ink.sapo.pt/3.1.1/img/touch-icon-iphone-retina.png">
-<link rel="apple-touch-icon" sizes="152x152"
-	href="http://cdn.ink.sapo.pt/3.1.1/img/touch-icon-ipad-retina.png">
-<link rel="apple-touch-startup-image"
-	href="http://cdn.ink.sapo.pt/3.1.1/img/splash.320x460.png"
-	media="screen and (min-device-width: 200px) and (max-device-width: 320px) and (orientation:portrait)">
-<link rel="apple-touch-startup-image"
-	href="http://cdn.ink.sapo.pt/3.1.1/img/splash.768x1004.png"
-	media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait)">
-<link rel="apple-touch-startup-image"
-	href="http://cdn.ink.sapo.pt/3.1.1/img/splash.1024x748.png"
-	media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape)">
-
 <!-- load Ink's css from the cdn -->
 <link rel="stylesheet" type="text/css"
 	href="http://cdn.ink.sapo.pt/3.1.1/css/ink-flex.min.css">
-<link rel="stylesheet" type="text/css"
-	href="http://cdn.ink.sapo.pt/3.1.1/css/font-awesome.min.css">
+<!-- <link rel="stylesheet" type="text/css"
+	href="http://cdn.ink.sapo.pt/3.1.1/css/font-awesome.min.css"> -->
 
-<!-- load Ink's css for IE8 -->
-<!--[if lt IE 9 ]>
-            <link rel="stylesheet" href="http://cdn.ink.sapo.pt/3.1.1/css/ink-ie.min.css" type="text/css" media="screen" title="no title" charset="utf-8">
-        <![endif]-->
 
-<!-- test browser flexbox support and load legacy grid if unsupported -->
-<script type="text/javascript"
-	src="http://cdn.ink.sapo.pt/3.1.1/js/modernizr.js"></script>
-<script type="text/javascript">
-            Modernizr.load({
-              test: Modernizr.flexbox,
-              nope : 'http://cdn.ink.sapo.pt/3.1.1/css/ink-legacy.min.css'
-            });
-        </script>
-
-<!-- load Ink's javascript files from the cdn -->
-<script type="text/javascript"
-	src="http://cdn.ink.sapo.pt/3.1.1/js/ink-all.min.js"></script>
-<script type="text/javascript"
-	src="http://cdn.ink.sapo.pt/3.1.1/js/autoload.js"></script>
 <!--  슬라이드  -->
-	<script type="text/javascript" src="../js/resources/jquery-1.9.1.min.js"></script>
+<!-- 	<script type="text/javascript" src="../js/resources/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="../js/resources/kh/jssor.js"></script>
-    <script type="text/javascript" src="../js/resources/kh/jssor.slider.js"></script>
+    <script type="text/javascript" src="../js/resources/kh/jssor.slider.js"></script> -->
     
 	<!-- 별 -->
 <link rel="stylesheet" href="../css/resources/starrr.css">
 <link rel="stylesheet"
 	href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
 	
-	
+<script type='text/javascript' src='http://code.jquery.com/jquery-1.7.2.js'></script>
+<script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>	
 <style type="text/css">
 /* 스타일 적용 공간! */
 
+.wrap-chu {
+	width: 1200px;
+	height: 100%;
+	margin: 0 auto;
+	/* margin-top: 50px; */
+}
+
+
+/* 계단현상 */
+.gnb li {
+	margin: 0;
+}
 
 
 .yun-container {
-	/* width: 1200px; */
 	margin: 0 auto;
+	padding-top: 100px;
+	display: table;
+}
+
+footer {
+/* 	text-align: center; */
 }
 
 .yun-info-bg {
@@ -107,97 +87,14 @@
 	height: 410px;
 	float: left;
 	margin: 5px;
-	font-size: 40px;
 	overflow: hidden;
 	border-radius: 10px;
+	cursor: pointer;
 }
 
-
-
-
-/* 슬라이드 이미지 CSS */
-/*  * {
-	border: 1px solid blue;
-}   */
-
-
-.panel {
-	border-radius: 2px;
-	-webkit-box-shadow: #dddddd 0 1px 1px 0;
-	-moz-box-shadow: #dddddd 0 1px 1px 0;
-	box-shadow: #dddddd 0 1px 1px 0;
-	padding: 1em;
-	border: 1px solid #BBB;
-	background-color: #FFF;
-	height: 480px;
-}
-
-#thumbs_carousel .slide {
-	opacity: 0.6;
-}
-
-#thumbs_carousel .slide.active {
-	opacity: 1;
-}
-
-.vertical-space {
-	width: 400px;
-	text-align: center;
-	margin-left: 0px;
-}
-
-.column-group.gutters {
-	margin-left: -16px;
-}
-
-
-/* .ink-carousel {
-	height: 390px;
-} */
-
-.kh-small-shop {
-	height: 60px;
-}
-
-
-#thumbs_carousel {
-	height: 60px;
-}
-.all-20 {
-	width: 120px;
-	height: 100px;
-}
-.kh-big-img {
- 	height: 360px;
-}
-.kh-small-img {
-	height: 60px;
-}
-.ink-carousel .ink-navigation {
-margin: 6px;
-}
-
-.demo-wrap {
-	float: right;
-	width: 583px;
-}
-.demo-wrap .DG-wrapper {
-	width: 520px;
-	position: relative;
-	margin-left: 0px;
-}
-.kh-shopInfo {
-		float: right;
-		width: 573px;
-		margin-top: 29px;
-		margin-bottom: 12px;
-}
-p {
-	margin-bottom: 7px;
-}
-
-#modal_carousel {
-height: 1000px;
+#yun-buttondiv {
+height: 50px;
+float: right;
 }
 
 /* hover */
@@ -209,13 +106,15 @@ height: 1000px;
 	height: 410px;
 	overflow: hidden;
 	border-radius: 10px;
+	
 }
 
 .kh-celimg {
 	width: 280px;
-	height: 410px;	
+	height: 389px;	
 	overflow: hidden;
 	border-radius: 10px;
+	
 	
 }
 .kh-basic {
@@ -223,10 +122,35 @@ height: 1000px;
 	bottom: 0px;
 	width: 280px;
 	text-align: center;
-	height: 60px;
-	background-color: rgba(0,0,0,0.5);
+	height: 100px;
+	background-color: rgba(0,0,0,1);
 	color: white;
 	border-radius: 0px 0px 10px 10px;
+	font-size: 30px;
+}
+
+.kh-basic h2 {
+	color: white;
+	margin-top: 15px;
+}
+
+.kh-detail h2 {
+	color: white;
+	margin-top: 10px;
+	font-size: 30px;
+}
+
+.kh-detail p {
+	color: white;
+	margin-top: 15px;
+}
+
+.kh-detail .starrr {
+	margin-top: 24px;
+}
+
+.kh-basic .starrr {
+   	margin-top: 10px;
 }
 
 .kh-detail {
@@ -234,13 +158,35 @@ height: 1000px;
 	bottom: 0px;
 	width: 280px;
 	text-align: center;
-	height: 100px;
-	background-color: rgba(0,0,0,0.5);
+	height: 140px;
+	background-color: rgba(0,0,0,1);
 	color: white;
 	border-radius: 0px 0px 10px 10px;
 }	
 
+.kh-gradation {
+	position: absolute;
+	top: 0px;
+	width: 280px;
+	height: 270px;
+	background-color: rgba(0,0,0,0.5);
+	display: none;
+	border-radius: 10px 10px 0px 0px;
+}
+.kh-row {
+	height: 430px;
+}
 
+.kh-chuno {
+	position: absolute;
+	left: 227px;
+	top: 5px;
+}
+
+.kh-bgtitle {
+	float: left;
+	font-size: 35px;
+}
 /* 슬라이더 */
 
             /* jssor slider arrow navigator skin 05 css */
@@ -310,98 +256,202 @@ height: 1000px;
                     border: #fff 1px solid;
                 }
                 
-                .starrr{
-                	position: absolute;
-                	top: 40px;
-                	left: 90px;
-                }
+
                 
 					
 </style>
 
 </head>
-<body>
+<body class="home">
 
-	<header>
+	<jy_header>
 		<!-- header 건들지 말긔! -->
-	</header>
+	</jy_header>
 
 
 
 	<div id="wrap-chu" class="wrap-chu">
-
 		<div class="yun-container">
+		<!-- <div class="kh-row"> -->
 			<div class="yun-box">
 				<div class="kh-cellist">
+				<div class="kh-chuno">♥17</div>
 					<img class="kh-celimg" src="../images/kh-celebrity/cel1.jpg"/>
-					<div class="kh-basic"><p>Celebrity</p></div>
+					<div class="kh-basic">
+						<h2>Celebrity</h2>
+						<div class="starrr"></div>
+					</div>
+					<div class="kh-detail">
+						<h2>Celebrity</h2>
+						<div class="starrr"></div>
+						<p>♥mychu 추가</p>
+					</div>
+					<div class="kh-gradation"></div>
 				</div>
 			</div>
 			<div class="yun-box">
 				<div class="kh-cellist">
+				<div class="kh-chuno">♥17</div>
 					<img class="kh-celimg" src="../images/kh-celebrity/cel2.jpg"/>
-					<div class="kh-basic"><p>Celebrity</p></div>
+					<div class="kh-basic">
+						<h2>Celebrity</h2>
+						<div class="starrr"></div>
+					</div>
+					<div class="kh-detail">
+						<h2>Celebrity</h2>
+						<div class="starrr"></div>
+						<p>♥mychu 추가</p>
+					</div>
+					<div class="kh-gradation"></div>
 				</div>
 			</div>
 			<div class="yun-box">
 				<div class="kh-cellist">
+				<div class="kh-chuno">♥17</div>
 					<img class="kh-celimg" src="../images/kh-celebrity/cel3.jpg"/>
-					<div class="kh-basic"><p>Celebrity</p></div>
+					<div class="kh-basic">
+						<h2>Celebrity</h2>
+						<div class="starrr"></div>
+					</div>
+					<div class="kh-detail">
+						<h2>Celebrity</h2>
+						<div class="starrr"></div>
+						<p>♥mychu 추가</p>
+					</div>
+					<div class="kh-gradation"></div>
 				</div>
 			</div>
 			<div class="yun-box">
 				<div class="kh-cellist">
+				<div class="kh-chuno">♥17</div>
 					<img class="kh-celimg" src="../images/kh-celebrity/cel4.jpg"/>
-					<div class="kh-basic"><p>Celebrity</p></div>
+					<div class="kh-basic">
+						<h2>Celebrity</h2>
+						<div class="starrr"></div>
+					</div>
+					<div class="kh-detail">
+						<h2>Celebrity</h2>
+						<div class="starrr"></div>
+						<p>♥mychu 추가</p>
+					</div>
+					<div class="kh-gradation"></div>
 				</div>
 			</div>
+			<!-- </div> -->
 			<div class="yun-box">
 				<div class="kh-cellist">
+				<div class="kh-chuno">♥17</div>
 					<img class="kh-celimg" src="../images/kh-celebrity/cel5.jpg"/>
-					<div class="kh-basic"><p>Celebrity</p></div>
+					<div class="kh-basic">
+						<h2>Celebrity</h2>
+						<div class="starrr"></div>
+					</div>
+					<div class="kh-detail">
+						<h2>Celebrity</h2>
+						<div class="starrr"></div>
+						<p>♥mychu 추가</p>
+					</div>
+					<div class="kh-gradation"></div>
 				</div>
 			</div>
 			<div class="yun-box">
 				<div class="kh-cellist">
+				<div class="kh-chuno">♥17</div>
 					<img class="kh-celimg" src="../images/kh-celebrity/cel6.jpg"/>
-					<div class="kh-basic"><p>Celebrity</p></div>
+					<div class="kh-basic">
+						<h2>Celebrity</h2>
+						<div class="starrr"></div>
+					</div>
+					<div class="kh-detail">
+						<h2>Celebrity</h2>
+						<div class="starrr"></div>
+						<p>♥mychu 추가</p>
+					</div>
+					<div class="kh-gradation"></div>
 				</div>
 			</div>
 			<div class="yun-box">
 				<div class="kh-cellist">
+				<div class="kh-chuno">♥17</div>
 					<img class="kh-celimg" src="../images/kh-celebrity/cel7.jpg"/>
-					<div class="kh-basic"><p>Celebrity</p></div>
+					<div class="kh-basic">
+						<h2>Celebrity</h2>
+						<div class="starrr"></div>
+					</div>
+					<div class="kh-detail">
+						<h2>Celebrity</h2>
+						<div class="starrr"></div>
+						<p>♥mychu 추가</p>
+					</div>
+					<div class="kh-gradation"></div>
 				</div>
 			</div>
 			<div class="yun-box">
 				<div class="kh-cellist">
+				<div class="kh-chuno">♥17</div>
 					<img class="kh-celimg" src="../images/kh-celebrity/cel8.jpg"/>
-					<div class="kh-basic"><p>Celebrity</p></div>
+					<div class="kh-basic">
+						<h2>Celebrity</h2>
+						<div class="starrr"></div>
+					</div>
+					<div class="kh-detail">
+						<h2>Celebrity</h2>
+						<div class="starrr"></div>
+						<p>♥mychu 추가</p>
+					</div>
+					<div class="kh-gradation"></div>
 				</div>
 			</div>
 			<div class="yun-box">
 				<div class="kh-cellist">
+				<div class="kh-chuno">♥17</div>
 					<img class="kh-celimg" src="../images/kh-celebrity/cel9.jpg"/>
-					<div class="kh-basic"><p>Celebrity</p></div>
+					<div class="kh-basic">
+						<h2>Celebrity</h2>
+						<div class="starrr"></div>
+					</div>
+					<div class="kh-detail">
+						<h2>Celebrity</h2>
+						<div class="starrr"></div>
+						<p>♥mychu 추가</p>
+					</div>
+					<div class="kh-gradation"></div>
 				</div>
 			</div>
 			<div class="yun-box">
 				<div class="kh-cellist">
+				<div class="kh-chuno">♥17</div>
 					<img class="kh-celimg" src="../images/kh-celebrity/cel10.jpg"/>
-					<div class="kh-basic"><p>Celebrity</p></div>
+					<div class="kh-basic">
+						<h2>Celebrity</h2>
+						<div class="starrr"></div>
+					</div>
+					<div class="kh-detail">
+						<h2>Celebrity</h2>
+						<div class="starrr"></div>
+						<p>♥mychu 추가</p>
+					</div>
+					<div class="kh-gradation"></div>
 				</div>
 			</div>
 			<div class="yun-box">
 				<div class="kh-cellist">
+				<div class="kh-chuno">♥17</div>
 					<img class="kh-celimg" src="../images/kh-celebrity/cel1.jpg"/>
-					<div class="kh-basic"><p>Celebrity</p></div>
+					<div class="kh-basic">
+						<h2>Celebrity</h2>
+						<div class="starrr"></div>
+					</div>
+					<div class="kh-detail">
+						<h2>Celebrity</h2>
+						<div class="starrr"></div>
+						<p>♥mychu 추가</p>
+					</div>
+					<div class="kh-gradation"></div>
 				</div>
 			</div>
 		</div>
 	</div>
-
-
-
 	<footer>
 		<!-- footer 건들지 말긔! -->
 	</footer>
@@ -410,7 +460,7 @@ height: 1000px;
 		src='../js/resources/jquery-2.1.1.min.js'></script>
 	<script type="text/javascript">
 	<!-- header, footer 로드 스크립트!! -->
-		$('header').load('common/header.html');
+		$('jy_header').load('common/jy_header.html');
 		$('footer').load('common/footer.html');
 
 		var container = $('.yun-container');
@@ -451,31 +501,60 @@ height: 1000px;
 				$('.yun-edge').after('<div class="yun-info-bg"></div>');
 				$('.yun-info-bg').load('templates/kh-image-gallery.source.html');
 				$('.yun-info-bg').slideDown();
-				setTimeout(function () {  $('html, body').animate({scrollTop:$('.yun-info-bg').position().top}, 'slow');  });
+				setTimeout(
+						function () {
+							$('html, body').animate(
+									{scrollTop:$('.yun-info-bg').position().top-75},	'slow');
+							});
 				
+				$('.kh-row').click(function() {
+					container.children().removeClass('yun-selected'); // 기존에 selected 된 클레스를 리셋
+					$(this).addClass('yun-selected'); //누른 div에 selected 표시
+					var selectedPos = $(this).index();
+					});
+				
+/* 				setTimeout(
+						function () {
+							$('.kh-row').animate(
+									{height: 860px;},	'slow');
+							}); */
+				
+				$('div').on("click",".yun-exit",function(){
+					event.stopPropagation();
+					$('.yun-info-bg').slideUp(function() {
+						$(this).remove();
+					});
+				});			
 			}
 		});
 		
 	</script>
 	<!-- hover -->
 	<script>
+	$( document ).ready(function() {
+		$(".kh-detail").css("display", "none");
 	$(".kh-cellist").hover(
 			  function () {
-				  $(this).find(".kh-basic").remove();
+				  $(this).find(".kh-basic").css("display", "none");
+				  $(this).find(".kh-detail").css("display", "block");
+				  $(this).find(".kh-gradation").css("display", "block");
+				 /*  $(this).find(".kh-basic").remove();
 				  $(this).append("<div class='kh-detail'></div>");
-				  $(".kh-detail").load("kh-star.html");
+				  $(".kh-detail").load("kh-star.html"); */
 			  },
 			  function () {
-				  $(this).append($("<div class='kh-basic'><p>Celebrity</p></div>"));
-				  $(this).find(".kh-detail").remove();
+				  $(this).find(".kh-basic").css("display", "block");
+				  $(this).find(".kh-detail").css("display", "none");
+				  $(this).find(".kh-gradation").css("display", "none");
+				  /* $(this).append($("<div class='kh-basic'><p>Celebrity</p></div>"));
+				  $(this).find(".kh-detail").remove(); */
 			  }
 			);
+	});
 
 	</script>
 	
 <!-- 별 -->    
-	<script
-		src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.js"></script>
 	<script src="../js/resources/starrr.js"></script>
 
 
