--- a/beautyChuSpring/src/main/webapp/view/admin/coupon.html
+++ b/beautyChuSpring/src/main/webapp/view/admin/coupon.html
@@ -232,18 +232,20 @@
 					<div class="col-md-12 mt">
 						<div class="content-panel">
 
-							<form class="form-inline" style="float: right; margin-right: 30px;">
-									<div class="form-group">
-										<h4 class="" style="font-size: 15px;">
-										<i class="glyphicon glyphicon-search"></i> 쿠폰 코드 검색</h4>
-										</div>
-										
-										<div class="form-group" style="margin-left: 10px;">
-											<label class="sr-only" for="jy-codeno"></label> 
-											<input type="text" class="form-control"
-												id="jy-codeno1" placeholder="0000A - 0000A - aaaaa" style="width: 300px;">
-										</div>
-										<!-- 
+							<form class="form-inline"
+								style="float: right; margin-right: 30px;">
+								<div class="form-group">
+									<h4 class="" style="font-size: 15px;">
+										<i class="glyphicon glyphicon-search"></i> 쿠폰 코드 검색
+									</h4>
+								</div>
+
+								<div class="form-group" style="margin-left: 10px;">
+									<label class="sr-only" for="jy-codeno"></label> <input
+										type="text" class="form-control" id="jy-codeno1"
+										placeholder="0000A - 0000A - aaaaa" style="width: 300px;">
+								</div>
+								<!-- 
 										<div class="form-group" style="margin-left: 10px;">
 											<label class="sr-only" for="jy-codeno1"></label> 
 											<input type="text" class="form-control"
@@ -270,16 +272,18 @@
 												id="jy-codeno3" placeholder="" style="width: 100px;">
 										</div>
 										 -->
-										<div class="form-group" style="margin-left: 10px;">
-										<button class="btn btn-default glyphicon glyphicon-search"></button>
-										</div>  
+								<div class="form-group" style="margin-left: 10px;">
+									<button class="btn btn-default glyphicon glyphicon-search"></button>
+								</div>
 							</form>
 
 							<table class="table table-hover">
-								<h4><i class="fa fa-angle-right"></i> Coupon Management</h4>
-								
+								<h4>
+									<i class="fa fa-angle-right"></i> Coupon Management
+								</h4>
+
 								<hr>
-								
+
 								<thead>
 									<tr>
 										<th><i class="glyphicon glyphicon-user"></i> 쿠폰 소지자 계정</th>
@@ -334,6 +338,21 @@
 									</tr>
 								</tbody>
 							</table>
+							
+					<nav style="text-align: center;">
+						<ul class="pagination">
+							<li class="disabled"><a href="#" aria-label="Previous"><span
+									aria-hidden="true">&laquo;</span></a></li>
+							<li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
+							<li class="omit"><a href="#">2 <span class="sr-only"></span></a></li>
+							<li class="omit"><a href="#">3 <span class="sr-only"></span></a></li>
+							<li class="omit"><a href="#">4 <span class="sr-only"></span></a></li>
+							<li class="omit"><a href="#">5 <span class="sr-only"></span></a></li>
+							<li class="omit"><a href="#" aria-label="Next"><span
+									aria-hidden="true">&raquo;</span></a></li>
+						</ul>
+					</nav>
+							
 						</div>
 						<!-- /content-panel -->
 					</div>
