--- a/beautyChuSpring/src/main/webapp/view/kh-celebritylist.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-celebritylist.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> -->
 <meta name="description" content="">
 <meta name="author" content="ink, cookbook, recipes">
 <meta name="HandheldFriendly" content="True">
@@ -27,9 +27,9 @@
 
 
 <!--  슬라이드  -->
-<!-- 	<script type="text/javascript" src="../js/resources/jquery-1.9.1.min.js"></script>
+ 	<script type="text/javascript" src="../js/resources/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="../js/resources/kh/jssor.js"></script>
-    <script type="text/javascript" src="../js/resources/kh/jssor.slider.js"></script> -->
+    <script type="text/javascript" src="../js/resources/kh/jssor.slider.js"></script>
     
 	<!-- 별 -->
 <link rel="stylesheet" href="../css/resources/starrr.css">
