--- a/beautyChuSpring/src/main/webapp/view/templates/yun-shoppricelist.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/yun-shoppricelist.html
@@ -65,9 +65,11 @@
 
 <div id=yun-shopdetailcontainer>
 
-	<div id=yun-shopstylelist class=yun-shopcontainerdiv>
-		<div id=yun-shopstyle1 class=yun-shopstyle>
+	<div id='yun-shopstylelist'>
+		<div id=yun-shopstyle1 class="yun-shopstyle">
 			<img class=yun-shopstyleimage src="../images/style-list/s1.png">
+			<div class="kh-smallbasic" style="border: 1px red solid;"><p>style name</p></div>
+			<div class="kh-smalldetail" style="border: 1px red solid;"><div><p>style name</p><p>price list</p></div><div class="starrr"></div></div>
 		</div>
 		<div id=yun-shopstyle2 class=yun-shopstyle>
 			<img class=yun-shopstyleimage src="../images/style-list/s2.png">
@@ -85,34 +87,135 @@
 			<img class=yun-shopstyleimage src="../images/style-list/s6.jpg">
 		</div>
 		<div id=yun-shopstyle7 class=yun-shopstyle>
-			<img class=yun-shopstyleimage src="../images/style-list/s7.jpg">
+			<img class=yun-shopstyleimage src="../images/style-list/s1.png">
 		</div>
 		<div id=yun-shopstyle8 class=yun-shopstyle>
 			<img class=yun-shopstyleimage src="../images/style-list/s8.jpg">
 		</div>
 		<div id=yun-shopstyle6 class=yun-shopstyle>
+			<img class=yun-shopstyleimage src="../images/style-list/s2.png">
+		</div>
+		<div id=yun-shopstyle6 class=yun-shopstyle>
+			<img class=yun-shopstyleimage src="../images/style-list/s3.jpg">
+		</div>
+		<div id=yun-shopstyle6 class=yun-shopstyle>
+			<img class=yun-shopstyleimage src="../images/style-list/s4.jpg">
+		</div>
+		<div id=yun-shopstyle6 class=yun-shopstyle>
 			<img class=yun-shopstyleimage src="../images/style-list/s5.jpg">
 		</div>
+		
+		
 	</div>
 
-	<div id=yun-shoppricelist class=yun-shopcontainerdiv>
+	<div id='yun-shoppricelist'>
+	<div style=" height: 50px;">
 		<div id=yun-buttondiv>
 			<img class='yun-back' src="../images/yun-shopdetail/back-icon.png">
 			<img class='yun-exit' src="../images/yun-shopdetail/exit-icon.png">
 		</div>
 
-
+		<div class="yun-pricetitle">
 		<h1>Price List</h1>
-
+		</div>
 		<div class=buttondiv>
 			<div class="ui button get-coupon">Get Coupon</div>
 		</div>
-		<img src="../images/yun-shopdetail/pricelist.png" width="100%" height="75%"/>
+	</div>	
+		
+		<div class="kh-pricelist">
+			<div class="kh-priceicon">
+			<img src="../images/icon/cuticon.png"/>
+			</div>
+			<div class="kh-lengthprice">
+				<p>S  10,000</p>
+				<p>M  20,000</p>
+				<p>L  30,000</p>
+			</div>
+		</div>
+		
+		<div class="kh-pricelist">
+			<div class="kh-priceicon">
+			<img src="../images/icon/cuticon.png"/>
+			</div>
+			<div class="kh-lengthprice">
+				<p>S  10,000</p>
+				<p>M  20,000</p>
+				<p>L  30,000</p>
+			</div>		
+		</div>
+		
+		<div class="kh-pricelist">
+			<div class="kh-priceicon">
+			<img src="../images/icon/coloricon.png"/>
+			</div>
+			<div class="kh-lengthprice">
+				<p>S  10,000</p>
+				<p>M  20,000</p>
+				<p>L  30,000</p>
+			</div>		
+		</div>
+		
+		<div class="kh-pricelist">
+			<div class="kh-priceicon">
+			<img src="../images/icon/coloricon.png"/>
+			</div>
+			<div class="kh-lengthprice">
+				<p>S  10,000</p>
+				<p>M  20,000</p>
+				<p>L  30,000</p>
+			</div>		
+		</div>
+		
+		<div class="kh-pricelist">
+			<div class="kh-priceicon">
+			<img src="../images/icon/permicon.png"/>
+			</div>
+			<div class="kh-lengthprice">
+				<p>S  10,000</p>
+				<p>M  20,000</p>
+				<p>L  30,000</p>
+			</div>		
+		</div>
+		
+		<div class="kh-pricelist">
+			<div class="kh-priceicon">
+			<img src="../images/icon/permicon.png"/>
+			</div>
+			<div class="kh-lengthprice">
+				<p>S  10,000</p>
+				<p>M  20,000</p>
+				<p>L  30,000</p>
+			</div>		
+		</div>
 
 	</div>
 
 
 </div>
+<script>
+
+$( document ).ready(function() {
+	$(".kh-smalldetail").css("display", "none");
+$(".yun-shopstyle").hover(
+		  function () {
+			  $(this).find(".kh-smallbasic").css("display", "none");
+			  $(this).find(".kh-smalldetail").css("display", "block");
+			  $(this).find(".kh-gradation").css("display", "block");
+		  },
+		  function () {
+			  $(this).find(".kh-smallbasic").css("display", "block");
+			  $(this).find(".kh-smalldetail").css("display", "none");
+			  $(this).find(".kh-gradation").css("display", "none");
+		  }
+		);
+});
+
+
+
+
+
+</script>
 
 <!-- 	</div>
 
