--- a/beautyChuSpring/src/main/webapp/view/yun-stylethumbnail.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-stylethumbnail.html
@@ -41,16 +41,18 @@
 <style type="text/css">
 
 
+
 /* 스타일 적용 공간! */
 
 /* ============================================================== */
+
 
 
 .wrap-chu {
 	width: 1200px;
 	height: 100%;
 	margin: 0 auto;
-	/* margin-top: 50px; */
+	margin-top: 100px; 
 }
 
 html {
@@ -58,6 +60,9 @@ html {
 }
 
 
+header {
+	height: 100px;
+}
 
 footer {
 	text-align: center;
@@ -78,7 +83,6 @@ body {
 	margin: 0 auto;
 	height: 100%;
 	display: table;
-	margin-top: 100px;
 }
 
 .yun-info-bg {
@@ -268,7 +272,8 @@ body {
 	bottom: 0px;
 	text-align: center;
 	width: 168px;
-
+	height: 178px;
+	background-color: rgba(0,0,0,0.5);
 }
 
 #yun-buttondiv {
@@ -669,7 +674,7 @@ body {
 					$(this).remove();
 				});
 				$('.yun-edge').after('<div id=changediv class="yun-info-bg"><div id=yun-div1 class=yun-div><div></div>');
-				$('#yun-div1').load('templates/yun-shoppricelist.html');
+				$('#yun-div1').load('templates/yun-shopdetail.html');
 				$('.yun-info-bg').slideDown();
 				setTimeout(function () {  $('html, body').animate({scrollTop:$('.yun-info-bg').position().top-75}, 'slow');  });
 				pagebtnnum=2;
